second modify the post

--- a/_posts/2017-02-10-一图胜过千言万语.md
+++ b/_posts/2017-02-10-一图胜过千言万语.md
@@ -4,15 +4,13 @@ title: 一图胜过千言万语
 subtitle: 图片如此高效的传递信息
 tags: [think,信息,媒介]
 ---
-
-标题是引用大学一位java老师说过的话。    
-这两天在网上看到一张图，简单、清晰。   
-_Linux常用性能调优工具_       
+	标题是引用大学java老师说过的话。    
+	这两天在网上看到一张图，简单、清晰。         
 ![Linux常用性能调优工具图](/img/2017-02-10-一图胜过千言万语-1.jpg)
-
-语言、文字、声音、图片、视频都只是一种传递信息的媒介，信息才是关键。   
-很显然文字是最晦涩的一种方式，它的优点是可传递非常高深、抽象的信息，像佛经、科研论述、哲学专著等信息。   
-提高图片表达方式能力，用到恰当处可事办功倍。   
+                          __Linux常用性能调优工具__            
+	语言、文字、声音、图片、视频都只是一种传递信息的媒介，信息才是关键。   
+	很显然文字是最晦涩的一种方式，它的优点是可传递非常高深、抽象的信息，像佛经、科研论述、哲学专著等信息。   
+	提高图片表达方式能力，用到恰当处可事办功倍。   
   
   
   
