--- a/_posts/2017-02-10-一图胜过千言万语.md
+++ b/_posts/2017-02-10-一图胜过千言万语.md
@@ -2,8 +2,10 @@
 layout: post
 title: 一图胜过千言万语
 subtitle: 图片传递信息如此高效
+category: technology
 tags: [think,信息,媒介]
 ---
+
 &emsp;&emsp;标题是引用大学java老师说过的话。    
 &emsp;&emsp;这两天在网上看到一张图，简单、清晰。
       
