--- a/_posts/2017-02-15-有意思的书.md
+++ b/_posts/2017-02-15-有意思的书.md
@@ -5,4 +5,4 @@ category: talk
 tags: [book, 兴趣]
 ---
 
-- [宗镜录略讲.pdf]({{ site.url }}/downloads/book/宗镜录略讲.pdf)
+- [宗镜录略讲.pdf]({{ site.url }}/assets/zongjingluluejiang.pdf)
