--- a/_posts/2017-02-15-有意思的书.md
+++ b/_posts/2017-02-15-有意思的书.md
@@ -5,4 +5,5 @@ category: talk
 tags: [book, 兴趣]
 ---
 
-- [宗镜录略讲.pdf]({{ site.url }}/assets/zongjingluluejiang.pdf)
+- [宗镜录略讲.pdf]({{ site.url }}/assets/zongjingluluejiang.pdf){:target="_blank"}
+- [佛说无量寿经.pdf]({{ site.url }}/assets/foshuowuliangshoujing.pdf){:target="_blank"}
